Fixed safair 8 and before issue with flexbox styling of main area where it would appear slightly off screen, e.g. ipad air 2 on browserstack

--- a/css/app.css
+++ b/css/app.css
@@ -130,6 +130,13 @@ input[type="email"]:hover,
         display: -ms-flexbox;
         display: flex;
     }
+
+    .main,
+    .sidebar {
+        /* fix flex issue where main area appears slightly off screen in Safari 8 and before */
+        -webkit-box-flex: 1;
+    }
+
     .main {
         width: 70%;
     }
